# dlt-parallel-example

./: README.md  pyproject.toml
dlt_parallel_example/: pipeline.py
