[tool.poetry]
name = "dlt-parallel-example"
version = "0.1.0"
description = ""
authors = ["Ruben Vereecken <ruben@20tech.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
dlt = "^1.4.0"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
